Add Chinese CV download linking

--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
         <div class="col-lg-5 site-content__inner-left">
             <div class="site-content__right">
                 <div class="left-vertical-menu">
-                    <div class="session-top-menu">
-                        <span style="color:#D360D7;">WENG</span><span style="color:#E5FB6F;">CV</span>
-                    </div>
                     <ul class="session-info-menu">
                         <li><i class="fas fa-user"></i></li>
                         <li><i class="fas fa-tools"></i></li>
@@ -35,7 +32,10 @@
                         <li><i class="fab fa-youtube"></i></li>
                     </ul>
                     <ul class="session-buttom-menu">
-                        <li><a href="https://drive.google.com/file/d/1t1N9_9gekH6cJsd2Wys2O2uOHeXTAASf/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
+                        <span style="color:rgb(122, 96, 215);">ENGLISH</span><span style="color:#E5FB6F;">CV</span>
+                        <li><a href="https://drive.google.com/file/d/1W53yoMN4Q3U95jMpbZaUKN1KjpHjnN0-/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
+                        <span style="color:rgb(215, 96, 96);">CHINESE</span><span style="color:#E5FB6F;">CV</span>
+                        <li><a href="https://drive.google.com/file/d/1WullxSik1fmN_r_PcM-1mPHfYAVkAO0N/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
                     </ul>
                 </div>
                 <div id="personInfo" class="person">
