[issue fix] RWD issue fix

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div id="container-viewer" class="container-view">  
                     <div id="container-page" class="container-page">
                         <div id="min-view-personInfo" class="person">
-                            <div class="person_avatar_min"></div>
+                            <div id="aboutFig" class="person_avatar_min"></div>
                             <div class="person_info">
                                 <h3 class="person_name">Weng, Sheng-Hung</h3>
                                 <div class="person_email">
