--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     </ul>
                     <ul class="session-buttom-menu">
                         <span style="color:rgb(122, 96, 215);">ENGLISH</span><span style="color:#E5FB6F;">CV</span>
-                        <li><a href="https://drive.google.com/file/d/1W53yoMN4Q3U95jMpbZaUKN1KjpHjnN0-/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
+                        <li><a href="https://drive.google.com/file/d/1NohODLvn3fTFBuzZGEdNQ2pgqQc1G-rN/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
                         <span style="color:rgb(215, 96, 96);">CHINESE</span><span style="color:#E5FB6F;">CV</span>
-                        <li><a href="https://drive.google.com/file/d/1WullxSik1fmN_r_PcM-1mPHfYAVkAO0N/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
+                        <li><a href="https://drive.google.com/file/d/1Y9y1cE4AOHwBYxbBzs3srjY9R1OSBOHo/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
                     </ul>
                 </div>
                 <div id="personInfo" class="person">
@@ -93,6 +93,10 @@
                                 <spen class="about-item-after">/</spen>
                             </div>
                             <div class="about-item rgba-complement-0">
+                                1y+ Linux Driver
+                                <spen class="about-item-after">/</spen>
+                            </div>
+                            <div class="about-item rgba-complement-0">
                                 1y+ IoT
                                 <spen class="about-item-after">/</spen>
                             </div>
@@ -109,7 +113,7 @@
                             </div>
                         </div>
                         <div class="about-description">
-                        <p>Product development experience 8 years, 1+ in IoT Dev, 1+ in Full-stack Dev, 3+ in Automotive Dev and 3+ in Embedded Linux Dev.
+                        <p>Product development experience ９ years, 1+ in Linux driver, 1+ in IoT Dev, 1+ in Full-stack Dev, 3+ in Automotive Dev and 3+ in Embedded Linux Dev.
                         Willing to embrace any kind of challenge and finding ways out to solve problems.
                         Love all the technical things in the world.</p>
                         </div>
@@ -162,6 +166,10 @@
                                         <h5>Embedded Linux Development</h5>
                                     </div>
                                     <div class="skill-content">
+                                        <li>
+                                            <h6 class="skill-content-item">Linux Driver in I2C</h6>
+                                            <span class="bar"><span class="hidden-master"></span></span>
+                                        </li>
                                         <li>
                                             <h6 class="skill-content-item">Docker Script designing</h6>
                                             <span class="bar"><span class="hidden-familiar"></span></span>
@@ -328,7 +336,7 @@
                                                 </h5>
                                                 <h5 class="text-session">
                                                 <span class="content">BLE device owner;</span>
-                                                <span class="content">Lead developer, the main designer of indoor positioning system responsible for design and implementation based on BLE AoA.</span>
+                                                <span class="content">Lead developer, the main FW designer of indoor positioning system responsible for design and implementation end user target device based on BLE AoA/ToF.</span>
                                                 </h5>                                
                                             </p>
                                         </div>
