[update] my skills update

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     </ul>
                     <ul class="session-buttom-menu">
                         <span style="color:rgb(122, 96, 215);">ENGLISH</span><span style="color:#E5FB6F;">CV</span>
-                        <li><a href="https://drive.google.com/file/d/1NohODLvn3fTFBuzZGEdNQ2pgqQc1G-rN/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
+                        <li><a href="https://drive.google.com/file/d/1E1b1DhFTGa3G-i3wwmDXgB3PQTFFA_lo/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
                         <span style="color:rgb(215, 96, 96);">CHINESE</span><span style="color:#E5FB6F;">CV</span>
-                        <li><a href="https://drive.google.com/file/d/1Y9y1cE4AOHwBYxbBzs3srjY9R1OSBOHo/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
+                        <li><a href="https://drive.google.com/file/d/1C5EjvfHlLi9ASoOcc1pNyKwtrHhE5G3j/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
                     </ul>
                 </div>
                 <div id="personInfo" class="person">
@@ -97,7 +97,7 @@
                                 <spen class="about-item-after">/</spen>
                             </div>
                             <div class="about-item rgba-complement-0">
-                                1y+ IoT
+                                2y+ IoT
                                 <spen class="about-item-after">/</spen>
                             </div>
                             <div class="about-item rgba-complement-0">
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                         <div class="about-description">
-                        <p>Product development experience ９ years, 1+ in Linux driver, 1+ in IoT Dev, 1+ in Full-stack Dev, 3+ in Automotive Dev and 3+ in Embedded Linux Dev.
+                        <p>Product development experience ９ years, 1+ in Linux driver, 2+ in IoT Dev, 1+ in Full-stack Dev, 3+ in Automotive Dev and 3+ in Embedded Linux Dev.
                         Willing to embrace any kind of challenge and finding ways out to solve problems.
                         Love all the technical things in the world.</p>
                         </div>
@@ -156,7 +156,11 @@
                                         </li>
                                         <li>
                                             <h6 class="skill-content-item">Android linux touch screen driver porting/debuging</h6>
-                                            <span class="bar"><span class="hidden-junior"></span></span>
+                                            <span class="bar"><span class="hidden-familiar"></span></span>
+                                        </li>
+                                        <li>
+                                            <h6 class="skill-content-item">Android linux I2C device driver implement/porting/debug</h6>
+                                            <span class="bar"><span class="hidden-master"></span></span>
                                         </li>
                                     </div>
                                 </div>
@@ -210,6 +214,10 @@
                                         <h5>Embedded MCU Development</h5>
                                     </div>
                                     <div class="skill-content">
+                                        <li>
+                                            <h6 class="skill-content-item">File system Programming in C</h6>
+                                            <span class="bar"><span class="hidden-master"></span></span>
+                                        </li>
                                         <li>
                                             <h6 class="skill-content-item">MCU None-OS Programming with C</h6>
                                             <span class="bar"><span class="hidden-master"></span></span>
@@ -323,11 +331,31 @@
                                             <span class="exp-start">Dec 2019</span>
                                             <span class="exp-end">Now</span>
                                         </h6>
+                                        <h6>
+                                            <span style="color: rgb(204,127,24);">The freedom member of team between different projects is supporting any require.</span>
+                                        </h6>
+                                        <div class="exp-session">
+                                            <div class="job-descript">IoT File System on FreeRTOS</div>
+                                            <h6 class="job-exp-time">
+                                                <span class="job-start">Dec 2021</span>
+                                                <span class="job-end">now</span>
+                                            </h6>
+                                            <p class="descript-text">
+                                                <h5 class="text-session">
+                                                <span class="role">Individual weight for the team</span>
+                                                <span class="content">100%</span>
+                                                </h5>
+                                                <h5 class="text-session">
+                                                <span class="content">File system owner;</span>
+                                                <span class="content">Lead developer, the main designer of the File system-on-chip support file operation on FreeRTOS.</span>
+                                                </h5>                                
+                                            </p>
+                                        </div>
                                         <div class="exp-session">
                                             <div class="job-descript">IoT-BLE 5.2 indoor positioning</div>
                                             <h6 class="job-exp-time">
                                                 <span class="job-start">June 2020</span>
-                                                <span class="job-end">now</span>
+                                                <span class="job-end">Nov 2020</span>
                                             </h6>
                                             <p class="descript-text">
                                                 <h5 class="text-session">
