--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     </ul>
                     <ul class="session-buttom-menu">
                         <span style="color:rgb(122, 96, 215);">ENGLISH</span><span style="color:#E5FB6F;">CV</span>
-                        <li><a href="https://drive.google.com/file/d/1E1b1DhFTGa3G-i3wwmDXgB3PQTFFA_lo/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
+                        <li><a href="https://drive.google.com/file/d/1lptGcMIxawA9XD00YBDantzeDy5vL2kD/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
                         <span style="color:rgb(215, 96, 96);">CHINESE</span><span style="color:#E5FB6F;">CV</span>
-                        <li><a href="https://drive.google.com/file/d/1C5EjvfHlLi9ASoOcc1pNyKwtrHhE5G3j/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
+                        <li><a href="https://drive.google.com/file/d/1QReHMFT_3EGeYGrPpmeFZJtOfjrj9DxP/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
                     </ul>
                 </div>
                 <div id="personInfo" class="person">
@@ -43,7 +43,7 @@
                     <div class="person_info">
                         <h3 class="person_name">Weng, Sheng-Hung</h3>
                         <div class="person_email">
-                            Goodog008@gmail.com
+                            LeoSHWeng@gmail.com
                         </div>
                         <div class="person_position">
                             Embedded System Integrater
@@ -93,7 +93,7 @@
                                 <spen class="about-item-after">/</spen>
                             </div>
                             <div class="about-item rgba-complement-0">
-                                1y+ Linux Driver
+                                2y+ Android and Linux Driver
                                 <spen class="about-item-after">/</spen>
                             </div>
                             <div class="about-item rgba-complement-0">
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                         <div class="about-description">
-                        <p>Product development experience ９ years, 1+ in Linux driver, 2+ in IoT Dev, 1+ in Full-stack Dev, 3+ in Automotive Dev and 3+ in Embedded Linux Dev.
+                        <p>Product development experiences are diverse, 2+ in Android and Linux driver, 2+ in IoT Dev, 1+ in Full-stack Dev, 3+ in Automotive Dev, and 3+ in Embedded Linux Dev.
                         Willing to embrace any kind of challenge and finding ways out to solve problems.
                         Love all the technical things in the world.</p>
                         </div>
@@ -139,6 +139,10 @@
                                             <span class="bar"><span class="hidden-expert"></span></span>
                                         </li>
                                         <li>
+                                            <h6 class="skill-content-item">WiFi application develop based on the OpenWRT</h6>
+                                            <span class="bar"><span class="hidden-familiar"></span></span>
+                                        </li>
+                                        <li>
                                             <h6 class="skill-content-item">Power consumption design in software</h6>
                                             <span class="bar"><span class="hidden-familiar"></span></span>
                                         </li>
@@ -150,6 +154,10 @@
                                         <h5>Android Linux Development</h5>
                                     </div>
                                     <div class="skill-content">
+                                        <li>
+                                            <h6 class="skill-content-item">Android linux Qcom sensor hub porting/debuging</h6>
+                                            <span class="bar"><span class="hidden-familiar"></span></span>
+                                        </li>
                                         <li>
                                             <h6 class="skill-content-item">Android linux display driver porting/debuging</h6>
                                             <span class="bar"><span class="hidden-familiar"></span></span>
@@ -335,10 +343,27 @@
                                             <span style="color: rgb(204,127,24);">The freedom member of team between different projects is supporting any require.</span>
                                         </h6>
                                         <div class="exp-session">
+                                            <div class="job-descript">Android Linux Sensor Hub Porting</div>
+                                            <h6 class="job-exp-time">
+                                                <span class="job-start">2021.12</span>
+                                                <span class="job-end">2022.02</span>
+                                            </h6>
+                                            <p class="descript-text">
+                                                <h5 class="text-session">
+                                                <span class="role">Individual weight for the team</span>
+                                                <span class="content">30%</span>
+                                                </h5>
+                                                <h5 class="text-session">
+                                                <span class="content">Sensor function maintainer;</span>
+                                                <span class="content">Porting various detector drivers is to the Qcom sensor hub.</span>
+                                                </h5>                                
+                                            </p>
+                                        </div> 
+                                        <div class="exp-session">
                                             <div class="job-descript">IoT File System on FreeRTOS</div>
                                             <h6 class="job-exp-time">
-                                                <span class="job-start">Dec 2021</span>
-                                                <span class="job-end">now</span>
+                                                <span class="job-start">2020.12</span>
+                                                <span class="job-end">2021.03</span>
                                             </h6>
                                             <p class="descript-text">
                                                 <h5 class="text-session">
@@ -354,8 +379,8 @@
                                         <div class="exp-session">
                                             <div class="job-descript">IoT-BLE 5.2 indoor positioning</div>
                                             <h6 class="job-exp-time">
-                                                <span class="job-start">June 2020</span>
-                                                <span class="job-end">Nov 2020</span>
+                                                <span class="job-start">2020.01</span>
+                                                <span class="job-end">2020.11</span>
                                             </h6>
                                             <p class="descript-text">
                                                 <h5 class="text-session">
