--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                                                 </h5>
                                                 <h5 class="text-session">
                                                 <span class="content">Booting up;</span>
-                                                <span class="content">Assemble the module of Android building to script file as daily build system. Generate the daily build flow.</span>
+                                                <span class="content">Assemble the module of Android building to script file as daily build system. Generate the daily build flow. And assist in confirming circuit loops for system booting up．</span>
                                                 </h5>                                
                                             </p>
                                         </div> 
