[Maintain and upload] update information
Signed-off-by: LeoSHWeng <LeoSHWeng@fih-foxconn.com>

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <div class="person_info">
                                 <h3 class="person_name">Weng, Sheng-Hung</h3>
                                 <div class="person_email">
-                                    Goodog008@gmail.com
+                                    LeoSHWeng@gmail.com
                                 </div>
                                 <div class="person_position">
                                     Embedded System Integrater
