--- a/index.html
+++ b/index.html
@@ -343,6 +343,23 @@
                                             <span style="color: rgb(204,127,24);">The freedom member of team between different projects is supporting any require.</span>
                                         </h6>
                                         <div class="exp-session">
+                                            <div class="job-descript">Automotive IVI product FTM function tuning</div>
+                                            <h6 class="job-exp-time">
+                                                <span class="job-start">2022.05</span>
+                                                <span class="job-end">2022.08</span>
+                                            </h6>
+                                            <p class="descript-text">
+                                                <h5 class="text-session">
+                                                <span class="role">Individual weight for the team</span>
+                                                <span class="content">50%</span>
+                                                </h5>
+                                                <h5 class="text-session">
+                                                <span class="content">In-Vehicle Infotainment FTM(Factory test mode) flow design;</span>
+                                                <span class="content">To check each embedded unit peripheral device normal run to work on factory guaranteeing production.</span>
+                                                </h5>                                
+                                            </p>
+                                        </div> 
+                                        <div class="exp-session">
                                             <div class="job-descript">Android Booting Up</div>
                                             <h6 class="job-exp-time">
                                                 <span class="job-start">2022.02</span>
