--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                         <h6>
                                             <span class="title">Senior Engineer</span>
                                             <span class="exp-start">Dec 2019</span>
-                                            <span class="exp-end">Now</span>
+                                            <span class="exp-end">Aug 2022</span>
                                         </h6>
                                         <h6>
                                             <span style="color: rgb(204,127,24);">The freedom member of team between different projects is supporting any require.</span>
