--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                                             <span class="bar"><span class="hidden-expert"></span></span>
                                         </li>
                                         <li>
-                                            <h6 class="skill-content-item">WiFi application develop based on the OpenWRT</h6>
+                                            <h6 class="skill-content-item">WiFi application develop based on the OpenWRT</h6>
                                             <span class="bar"><span class="hidden-familiar"></span></span>
                                         </li>
                                         <li>
-                                            <h6 class="skill-content-item">Power consumption design in software</h6>
+                                            <h6 class="skill-content-item">Power consumption design in software</h6>
                                             <span class="bar"><span class="hidden-familiar"></span></span>
                                         </li>
                                     </div>
