--- a/index.html
+++ b/index.html
@@ -112,20 +112,36 @@
                                 3y+ Automotive MCU
                             </div>
                         </div>
-                        <div class="about-description">
-                        <p>Product development experiences are diverse, 2+ in Android and Linux driver, 2+ in IoT Dev, 1+ in Full-stack Dev, 3+ in Automotive Dev, and 3+ in Embedded Linux Dev.
-                        Willing to embrace any kind of challenge and finding ways out to solve problems.
-                        Love all the technical things in the world.</p>
+                        <div class="about-CV">
+                        <p>Hi there, It’s a pleasure to meet you！</p><p>You can just call me by my English name Leo.</p><br>
+                        <p>I received my master’s degree from the Institute of communications engineering winning the award for best paper at National Chi Nan University.</p><br>
+                        <p><b>8y+</b> of engineering experience including Embedded Linux/Android/MCU systems on IoT, Storage, and Automotive product.</p>
+                        <p>Currently, I looking for new challenges.</p><br>
+                        <p>This is exp at my last Job.</p><br>
+                        <p>For Android BSP, supporting OEM/ODM android system bring-up, sensor hub driver porting, LCM driver porting, and generating daily build service server.</p>
+                        <p>For IoT, helping IoT-BLE 5.2 indoor positioning, implementation file system build-in RTOS target, and IoT accessories driver (for example i2c/spi sensor).</p><br>
+                        <p>I am technical support with my colleague when understaffed there.</p>
+                        <p>My primary duties range from Software/Firmware architecture design, android device driver porting, embedded web server design, etc...</p><br>
+                        <p>Executed projects are as follows：</p><br>     
+                        <p>Automotive head-up display</p>
+                        <p>Automotive electric induct lock</p>
+                        <p>Automotive Radio System (FM/AM) on FreeRTOS</p><br>
+                        <p>BLE indoor positions device</p>
+                        <p>Datacenter Archiving storage file system design</p>
+                        <p>IoT ODM/OEM firmware to be Modulable and FreeRTOS file system</p><br>
+                        <p>My personality trail is flexible and strongly influences team members as I am interested in passionate and enjoy connecting with people and experiencing new things in life.</p>
                         </div>
+                        <div class="about-description">
+                            <p>Product development experiences are diverse, <b>2y+</b> in Android and Linux driver, <b>2y+</b> in IoT Dev, <b>1y+</b> in Full-stack Dev, <b>3y+</b> in Automotive Dev, and <b>3y+</b> in Embedded Linux Dev.<br><br>
+                            Willing to embrace any kind of challenge and finding ways out to solve problems.
+                            Love all the technical things in the world.</p>
+                            </div>
                         </div>
                         <div id="skill" class="skill leo-block">
                             <div class="title-wrap">
                                 <h3 class="title">My Skill</h3>
                             </div>
                             <div class="skill-description">
-                                <p>I am a product developer and system integrater who experience in designing and developing system integration,
-                                    system structure, testing, debugging, problem-solving, and training staff within embedded technologies. 
-                                    Proven ability in optimizing embedded system functionality that improves workflow efficiencies of the system.</p>
                             </div>
                             <div class="skill-list">
                                 <div class="skill-item"> 
