--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                         <li><i class="fab fa-youtube"></i></li>
                     </ul>
                     <ul class="session-buttom-menu">
-                        <span style="color:rgb(122, 96, 215);">ENGLISH</span><span style="color:#E5FB6F;">CV</span>
-                        <li><a href="https://drive.google.com/file/d/1QrMEUxtfbJJBMqqnifIePDxy_Ej0HESy/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
-                        <span style="color:rgb(215, 96, 96);">CHINESE</span><span style="color:#E5FB6F;">CV</span>
+                        <!--<span style="color:rgb(122, 96, 215);">ENGLISH</span><span style="color:#f3feb7;">CV</span>
+                        <li><a href="https://drive.google.com/file/d/1k1wJKp_gC0Mp-kh-OEtUloqN60jrz-cR/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>-->
+                        <span style="color:rgb(215, 96, 96);">CHINESE</span><span style="color:#f3feb7;">CV</span>
                         <li><a href="https://drive.google.com/file/d/16urLWNwnc8mX_OB5aio17puf-Oz_dukB/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
                     </ul>
                 </div>
